# Web-Scraper-v1

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  scrape.toml  web_scraper_v1_docs.md
.github/workflows/: ci.yml
Schema/: README.md  cli-contract.example.json  cli-contract.schema.json  crawl-options.schema.json  crawl-summary.schema.json  database.schema.md  database.schema.sql  export.schema.json  fetch-result.schema.json  robots-result.schema.json  schema-manifest.json  stats.schema.json  timing-breakdown.schema.json
docs/: demo-script.md  production-reflection.md  protocol-mastery-checklist.md
docs/adr/: 0001-raw-socket-transport.md  0001-raw-sockets-vs-library-http-client.md  0002-sqlite-frontier-and-resume.md  0002-sqlite-production-settings.md  0003-sync-vs-async-fetching.md  0004-per-domain-rate-limiter.md  0005-robots-and-ethical-crawling.md  0006-wsgi-fixture-server.md
server/: __init__.py  chunked_test_server.py  wsgi_fixture_app.py  wsgi_results_viewer.py
src/scrapehound/: __init__.py  __main__.py  config.py  exceptions.py  models.py
tests/: conftest.py
tests/fixtures/: malformed_response.txt
tests/integration/: test_chunked_test_server.py  test_crawler_against_fixture_site.py  test_resume_after_interrupt.py  test_socket_fetcher_against_wsgi.py  test_transport_security.py
tests/unit/: test_chunked.py  test_cli.py  test_encoding.py  test_engine_parse_errors.py  test_engine_retry.py  test_frontier_states.py  test_html_parser.py  test_http_parser.py  test_rate_limit.py  test_redirects.py  test_retry.py  test_robots.py  (+3 more)
(+44 files in other folders)
